[gd_scene load_steps=6 format=2]

[ext_resource path="res://menus/roster.gd" type="Script" id=1]
[ext_resource path="res://tiles/menus_tiles.tres" type="TileSet" id=2]
[ext_resource path="res://gui/info-box.png" type="Texture" id=3]
[ext_resource path="res://confirm_rename_dialog.tscn" type="PackedScene" id=4]
[ext_resource path="res://menus/buttons/button_back.tscn" type="PackedScene" id=5]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 27, 0, 5, 27, 0, 10, 27, 0, 15, 27, 0, 262144, 27, 0, 262149, 27, 0, 262154, 27, 0, 262159, 27, 0, 524288, 27, 0, 524293, 27, 0, 524298, 27, 0, 524303, 27, 0, 786432, 27, 0, 786437, 27, 0, 786442, 27, 0, 786447, 27, 0, 1048576, 27, 0, 1048581, 27, 0, 1048586, 27, 0, 1048591, 27, 0, 1310720, 27, 0, 1310725, 27, 0, 1310730, 27, 0, 1310735, 27, 0, 1572864, 27, 0, 1572869, 27, 0, 1572874, 27, 0, 1572879, 27, 0, 1835008, 27, 0, 1835013, 27, 0, 1835018, 27, 0, 1835023, 27, 0 )

[node name="TextureRect" type="NinePatchRect" parent="."]
margin_left = 36.0
margin_top = 42.0
margin_right = 456.0
margin_bottom = 222.0
rect_min_size = Vector2( 420, 180 )
texture = ExtResource( 3 )
patch_margin_left = 13
patch_margin_top = 13
patch_margin_right = 13
patch_margin_bottom = 13

[node name="vbox_guildInfo" type="VBoxContainer" parent="."]
margin_left = 51.0
margin_top = 54.0
margin_right = 442.0
margin_bottom = 208.0

[node name="VBoxContainer" type="VBoxContainer" parent="vbox_guildInfo"]
margin_right = 391.0
margin_bottom = 50.0
custom_constants/separation = 4

[node name="field_guildName" type="Label" parent="vbox_guildInfo/VBoxContainer"]
margin_right = 391.0
margin_bottom = 14.0
text = "#GUILDNAME HERE#"
align = 1
valign = 1

[node name="field_guildMemberCount" type="Label" parent="vbox_guildInfo/VBoxContainer"]
margin_top = 18.0
margin_right = 391.0
margin_bottom = 32.0
text = "# / #"
align = 1
valign = 1

[node name="field_prestige" type="Label" parent="vbox_guildInfo/VBoxContainer"]
margin_top = 36.0
margin_right = 391.0
margin_bottom = 50.0
text = "# PRESTIGE"
align = 1
valign = 1

[node name="vbox_bottomBox" type="VBoxContainer" parent="vbox_guildInfo"]
margin_top = 54.0
margin_right = 391.0
margin_bottom = 157.0

[node name="HBoxContainer" type="HBoxContainer" parent="vbox_guildInfo/vbox_bottomBox"]
editor/display_folded = true
margin_right = 391.0
margin_bottom = 50.0

[node name="vbox_classCounts" type="VBoxContainer" parent="vbox_guildInfo/vbox_bottomBox/HBoxContainer"]
margin_right = 260.0
margin_bottom = 50.0
rect_min_size = Vector2( 260, 0 )

[node name="label_tankCount" type="Label" parent="vbox_guildInfo/vbox_bottomBox/HBoxContainer/vbox_classCounts"]
margin_right = 260.0
margin_bottom = 14.0
text = "Tanks: N"

[node name="label_dpsCount" type="Label" parent="vbox_guildInfo/vbox_bottomBox/HBoxContainer/vbox_classCounts"]
margin_top = 18.0
margin_right = 260.0
margin_bottom = 32.0
text = "DPS: N"

[node name="label_supportCount" type="Label" parent="vbox_guildInfo/vbox_bottomBox/HBoxContainer/vbox_classCounts"]
margin_top = 36.0
margin_right = 260.0
margin_bottom = 50.0
text = "Support: N"

[node name="button_renameGuild" type="Button" parent="vbox_guildInfo/vbox_bottomBox/HBoxContainer"]
margin_left = 264.0
margin_right = 363.0
margin_bottom = 50.0
text = "Rename guild"

[node name="field_spacer" type="Label" parent="vbox_guildInfo/vbox_bottomBox"]
margin_top = 54.0
margin_right = 391.0
margin_bottom = 85.0
text = "
"
align = 1
valign = 1

[node name="field_founded" type="Label" parent="vbox_guildInfo/vbox_bottomBox"]
margin_top = 89.0
margin_right = 391.0
margin_bottom = 103.0
text = "# FOUNDED: January 1, 1970"
align = 1
valign = 1

[node name="label_guildManagement" type="Label" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 478.0
margin_bottom = 48.0
rect_min_size = Vector2( 470, 40 )
custom_colors/font_color = Color( 0.96875, 0.468913, 0.197917, 1 )
text = "Guild Management"
align = 1
valign = 1

[node name="label_roster" type="Label" parent="."]
margin_left = 1.0
margin_top = 233.0
margin_right = 478.0
margin_bottom = 256.0
text = "ROSTER"
align = 1
valign = 1

[node name="scroll_roster" type="ScrollContainer" parent="."]
margin_left = 13.0
margin_top = 257.0
margin_right = 473.0
margin_bottom = 852.0
scroll_horizontal_enabled = false

[node name="vbox" type="VBoxContainer" parent="scroll_roster"]
margin_bottom = 2000.0
rect_min_size = Vector2( 0, 2000 )
custom_constants/separation = 10

[node name="confirm_rename_dialog" parent="." instance=ExtResource( 4 )]

[node name="button_back" parent="." instance=ExtResource( 5 )]
[connection signal="pressed" from="vbox_guildInfo/vbox_bottomBox/HBoxContainer/button_renameGuild" to="." method="_on_button_renameGuild_pressed"]
[connection signal="pressed" from="button_back" to="." method="_on_button_back_pressed"]
